Small fixes + smooth scrolling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar is-dark is-size-4 is-fixed-top" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="main-navbar">
+      <a id="navbar-burger" role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="main-navbar">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -48,7 +48,7 @@
 
 
 <div id="personal-statement" class="full-page">
-  <h1 class="statement-text has-text-white is-size-1">Computer Science Student<br> +<br> Aspiring Developer</h1>
+  <h1 class="statement-text has-text-white is-size-1">Computer Science Student<br> +<br> Aspiring Developer <br> <i class="fab fa-github-square"></i> <i class="fab fa-linkedin"></i></h1>
 </div>
 <div id="personal-about" class="container full-page">
   <div class="container personal-description">
