--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a href="#contact-form" class="button is-primary">
             <strong>Contact Me</strong>
           </a>
         </div>
@@ -48,10 +48,10 @@
 
 
 <div id="personal-statement" class="full-page">
-  <h1 class="statement-text has-text-white is-size-1">Computer Science Student<br> +<br> Aspiring Developer <br> <i class="fab fa-github-square"></i> <i class="fab fa-linkedin"></i></h1>
+  <h1 class="statement-text has-text-white is-size-1">Computer Science Student<br> +<br> Aspiring Developer <br> <a href="https://github.com/roberthampton" target="_blank"><i class="fab fa-github-square"></i></a> <a href="https://linkedin.com/in/robert-hampton-2021" target="_blank"><i class="fab fa-linkedin"></a></i></h1>
 </div>
 <div id="personal-about" class="container full-page">
-  <div class="container personal-description">
+  <div class="personal-description">
     <h1 class="is-size-3">About Me</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
@@ -110,7 +110,7 @@
   <div class="column">
     <div class="card">
       <div class="card-image">
-        <figure class="image is-4by3">
+        <figure class="image is-3by2">
           <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
         </figure>
       </div>
@@ -132,7 +132,7 @@
        </p>
        <p class="card-footer-item">
          <span>
-           View GitHub <a href="#">Repository</a>
+           View <a href="#">GitHub Repository</a>
          </span>
        </p>
      </footer>
@@ -142,7 +142,7 @@
   <div class="column">
     <div class="card">
       <div class="card-image">
-        <figure class="image is-4by3">
+        <figure class="image is-3by2">
           <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
         </figure>
       </div>
@@ -159,12 +159,12 @@
        <footer class="card-footer">
        <p class="card-footer-item">
          <span>
-           View <a href="https://twitter.com/codinghorror/status/506010907021828096">Website</a>
+           View <a href="#">Website</a>
          </span>
        </p>
        <p class="card-footer-item">
          <span>
-           View GitHub <a href="#">Repository</a>
+           View <a href="#">GitHub Repository</a>
          </span>
        </p>
      </footer>
@@ -172,5 +172,41 @@
   </div>
 </div>
 </div>
+<div id="contact-form" class="container full-page">
+<h1 class="is-size-3">Contact Me</h1>
+<form action="https://formspree.io/xoqanqpp" method="POST">
+  <div class="field">
+  <label class="label">Name</label>
+  <div class="control">
+    <input class="input" type="text" placeholder="e.g John Smith" name="name">
+  </div>
+  </div>
+
+<div class="field">
+  <label class="label">Email</label>
+  <div class="control">
+    <input class="input" type="email" placeholder="e.g. johnsmith@gmail.com" name="_replyto">
+  </div>
+</div>
+<div class="field">
+  <label class="label">Message</label>
+  <textarea class="textarea" rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required=""></textarea>
+</div>
+  <div class="control">
+      <input type="submit" class="button is-primary">
+  </div>
+</form>
+</div>
+
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      Thanks for visiting. This website was styled using <a href="https://bulma.io/" target="_blank">Bulma</a>. The GitHub Repository for this site can be
+      viewed <a href="https://github.com/roberthampton/PersonalWebsite" target="_blank">here</a>.
+    </p>
+  </div>
+</footer>
+
+<script src="js/navbar.js" charset="utf-8"></script>
   </body>
 </html>
