Updated content + added links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 <div id="personal-about" class="container full-page">
   <div class="personal-description">
     <h1 class="is-size-3">About Me</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Hello and welcome to my personal website! My name is Robert Hampton and I'm a Computer Science student
+    at the University of Dundee and an aspiring software developer. I will graduate in the summer of 2021 and right now
+  I am looking for an internship in the summer of 2020 to help me get some experience in the industry and to further my skills.</p>
   </div>
   <div class="container personal-skills">
     <h1 class="is-size-3">My Skills</h1>
@@ -67,8 +69,11 @@
     </header>
     <div class="card-content">
    <div class="content">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+     <p>I am interested in a wide range of software development, but at the moment my particular focus is on web development, as I enjoy the practical
+       real world problem solving involved as well as the creative aspects of this kind of development.
+        The goal for me is to continue to improve my web development skills as well as start to learn some mobile development, which
+        is another area that is interesting to me.
+    </p>
      </div>
      </div>
   </div>
@@ -82,7 +87,9 @@
       </header>
       <div class="card-content">
      <div class="content">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+       <p>I have experience with a whole host of popular languages - Java, C#, C, C++, Python - and my recent interest in web development
+       has led to experience with diverse areas of the modern web dev stack, from the basic HTML/CSS and JS, to using component libraries for styling such as Bulma and Bootstrap, to creating a database application
+       using MySQL and PHP, as well as learning the basics of the JS framework Vue. </p>
        </div>
        </div>
     </div>
@@ -96,7 +103,8 @@
       </header>
       <div class="card-content">
      <div class="content">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+       <p>I have experience with a wide variety of common software development tools - I typically use Linux so am familiar with working with a CLI, I use git and GitHub for most of my version control
+       for both University projects and personal projects, I have deployed a website using popular deployment platform Netlify, and I find myself increasingly using tools like NPM and pip as I tinker with new areas of development and try to expand my skills.</p>
        </div>
        </div>
     </div>
@@ -110,8 +118,8 @@
   <div class="column">
     <div class="card">
       <div class="card-image">
-        <figure class="image is-3by2">
-          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+        <figure class="image is-16by9">
+          <img src="img/budget-image.PNG" alt="Placeholder image">
         </figure>
       </div>
       <header class="card-header">
@@ -121,18 +129,20 @@
       </header>
       <div class="card-content">
      <div class="content">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+       <p>This simple project was created using only HTML/CSS and JavaScript, and provides a budget calculator which allows the user to enter
+       a budget then their expenses to see a breakdown visualised by a pie chart (using <a href="https://www.chartjs.org/" target="_blank">Chart.js</a>).
+       </p>
        </div>
        </div>
        <footer class="card-footer">
        <p class="card-footer-item">
          <span>
-           View <a href="https://twitter.com/codinghorror/status/506010907021828096">Website</a>
+           View <a href="https://roberthampton.github.io/simple-budget/" target="_blank">Website</a>
          </span>
        </p>
        <p class="card-footer-item">
          <span>
-           View <a href="#">GitHub Repository</a>
+           View <a href="https://github.com/roberthampton/simple-budget" target="_blank">GitHub Repository</a>
          </span>
        </p>
      </footer>
@@ -142,29 +152,30 @@
   <div class="column">
     <div class="card">
       <div class="card-image">
-        <figure class="image is-3by2">
-          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+        <figure class="image is-16by9">
+          <img src="img/weather-image.PNG" alt="Placeholder image">
         </figure>
       </div>
       <header class="card-header">
       <p class="card-header-title is-size-4">
-        Weather Website
+        Vue Weather Forecasts
       </p>
       </header>
       <div class="card-content">
      <div class="content">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+       <p>This is a weather website I created that uses an API (<a href="https://openweathermap.org/api" target="_blank">Openweather API</a>) as well as Vue.js to allow the user to search for a location from
+       a set of available locations to see a 5 day, 3 hour weather forecast for that place. It is deployed using Netlify from a GitHub repo.</p>
        </div>
        </div>
        <footer class="card-footer">
        <p class="card-footer-item">
          <span>
-           View <a href="#">Website</a>
+           View <a href="https://www.robertsweather.xyz/" target="_blank">Website</a>
          </span>
        </p>
        <p class="card-footer-item">
          <span>
-           View <a href="#">GitHub Repository</a>
+           View <a href="https://github.com/roberthampton/simple-weather" target="_blank">GitHub Repository</a>
          </span>
        </p>
      </footer>
@@ -190,7 +201,7 @@
 </div>
 <div class="field">
   <label class="label">Message</label>
-  <textarea class="textarea" rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required=""></textarea>
+  <textarea class="textarea" rows="5" name="message" id="message" placeholder="Enter your message here..." required=""></textarea>
 </div>
   <div class="control">
       <input type="submit" class="button is-primary">
