Updated styling + compressed image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 
 <div id="personal-statement" class="full-page">
-  <h1 class="statement-text has-text-white is-size-1">Computer Science Student<br> +<br> Aspiring Developer <br> <a href="https://github.com/roberthampton" target="_blank"><i class="fab fa-github-square"></i></a> <a href="https://linkedin.com/in/robert-hampton-2021" target="_blank"><i class="fab fa-linkedin"></a></i></h1>
+  <div class="statement-text has-text-white"><span class="highlighted">Robert Hampton</span></div>
+  <div class=" has-text-white is-size-2"><span class="highlighted">Computer Science Student<br>Aspiring Developer <br></span></div>
+  <div class="icon-links"> <a class="has-text-white" href="https://github.com/roberthampton" target="_blank"><i class="fab fa-github-square"></i></a> <a class="has-text-white" href="https://linkedin.com/in/robert-hampton-2021" target="_blank"><i class="fab fa-linkedin"></a></i></div>
 </div>
 <div id="personal-about" class="container full-page">
   <div class="personal-description">
@@ -181,9 +183,38 @@
      </footer>
     </div>
   </div>
+
+  <div class="column">
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-16by9">
+          <img src="img/hololens-image.png" alt="Placeholder image">
+        </figure>
+      </div>
+      <header class="card-header">
+      <p class="card-header-title is-size-4">
+        HoloLens AR Medical Education App
+      </p>
+      </header>
+      <div class="card-content">
+     <div class="content">
+       <p>This was an extracurricular project at University in which I worked in a team with artists, biology students and other computer science students
+       to create an educational app for the augmented reality platform Microsoft HoloLens.</p>
+       </div>
+       </div>
+       <footer class="card-footer">
+       <p class="card-footer-item">
+         <span>
+           View <a href="https://drive.google.com/open?id=1Blbhzk_EAVOYVt9Cd5KyS_j_SV1lV084" target="_blank">slides from presentation</a>
+         </span>
+       </p>
+     </footer>
+    </div>
+  </div>
+
 </div>
 </div>
-<div id="contact-form" class="container full-page">
+<div id="contact-form" class="container">
 <h1 class="is-size-3">Contact Me</h1>
 <form action="https://formspree.io/xoqanqpp" method="POST">
   <div class="field">
