--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 <div id="personal-statement" class="full-page">
   <div class="statement-text has-text-white"><span class="highlighted">Robert Hampton</span></div>
-  <div class=" has-text-white is-size-2"><span class="highlighted">Computer Science Student<br>Aspiring Developer <br></span></div>
+  <div class=" has-text-white is-size-2"><span class="highlighted">Computer Science Student </span>
+    <span class="highlighted"> <br>Aspiring Developer <br></span></div>
   <div class="icon-links"> <a class="has-text-white" href="https://github.com/roberthampton" target="_blank"><i class="fab fa-github-square"></i></a> <a class="has-text-white" href="https://linkedin.com/in/robert-hampton-2021" target="_blank"><i class="fab fa-linkedin"></a></i></div>
 </div>
 <div id="personal-about" class="container full-page">
