small styling changes

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
 <div id="personal-statement" class="full-page">
   <div class="statement-text has-text-white"><span class="highlighted">Robert Hampton</span></div>
-  <div class=" has-text-white is-size-2"><span class="highlighted">Computer Science Student </span>
-    <span class="highlighted"> <br>Aspiring Developer <br></span></div>
-  <div class="icon-links"> <a class="has-text-white" href="https://github.com/roberthampton" target="_blank"><i class="fab fa-github-square"></i></a> <a class="has-text-white" href="https://linkedin.com/in/robert-hampton-2021" target="_blank"><i class="fab fa-linkedin"></a></i></div>
+  <div class=" has-text-white is-size-2"><span class="highlighted">Computer Science Student </span><br>
+    <span class="highlighted">Aspiring Developer</span></div>
+      <div class="icon-links"> <a class="has-text-white" href="https://github.com/roberthampton" target="_blank"><i class="fab fa-github-square"></i></a> <a class="has-text-white" href="https://linkedin.com/in/robert-hampton-2021" target="_blank"><i class="fab fa-linkedin"></a></i></div>
 </div>
 <div id="personal-about" class="container full-page">
   <div class="personal-description">
@@ -244,8 +244,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      Thanks for visiting. This website was styled using <a href="https://bulma.io/" target="_blank">Bulma</a>. The GitHub Repository for this site can be
-      viewed <a href="https://github.com/roberthampton/PersonalWebsite" target="_blank">here</a>.
+      Thanks for visiting. This website was styled using <a href="https://bulma.io/" target="_blank">Bulma</a>. The GitHub Repository which hosts the site (using GitHub Pages) can be viewed <a href="https://github.com/roberthampton/PersonalWebsite" target="_blank">here</a>.
     </p>
   </div>
 </footer>
