--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="card-content">
      <div class="content">
        <p>This is a weather website I created that uses an API (<a href="https://openweathermap.org/api" target="_blank">Openweather API</a>) as well as Vue.js to allow the user to search for a location from
-       a set of available locations to see a 5 day, 3 hour weather forecast for that place. It is deployed using Netlify from a GitHub repo.</p>
+       a set of available locations to see a 5 day, 3 hour weather forecast for that place. It is deployed using Netlify from a GitHub repository.</p>
        </div>
        </div>
        <footer class="card-footer">
