--- a/index.html
+++ b/index.html
@@ -150,9 +150,7 @@
        </p>
      </footer>
     </div>
-  </div>
 
-  <div class="column">
     <div class="card">
       <div class="card-image">
         <figure class="image is-16by9">
@@ -211,12 +209,38 @@
        </p>
      </footer>
     </div>
+
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-16by9">
+          <img src="img/django-image.png" alt="Placeholder image">
+        </figure>
+      </div>
+      <header class="card-header">
+      <p class="card-header-title is-size-4">
+        Django Habit Tracker
+      </p>
+      </header>
+      <div class="card-content">
+     <div class="content">
+       <p>This was a personal project I did to learn the popular Python web framework Django. It allows a user to sign up and start tracking habits they would like to build. The website is styled using Bootstrap and is deployed using Heroku.</p>
+       </div>
+       </div>
+       <footer class="card-footer">
+       <p class="card-footer-item">
+         <span>
+           View <a href="https://habit-tracker-django.herokuapp.com/" target="_blank">Website</a>
+         </span>
+       </p>
+     </footer>
+    </div>
   </div>
 
 </div>
 </div>
 <div id="contact-form" class="container">
-<h1 class="is-size-3">Contact Me</h1>
+<h1 class="is-size-2">Any questions?</h1>
+<h1 class="is-size-4">Please get in touch!</h1>
 <form action="https://formspree.io/xoqanqpp" method="POST">
   <div class="field">
   <label class="label">Name</label>
