fixed layouts and some styling

--- a/index.html
+++ b/index.html
@@ -53,15 +53,18 @@
     <span class="highlighted">Aspiring Developer</span></div>
       <div class="icon-links"> <a class="has-text-white" href="https://github.com/roberthampton" target="_blank"><i class="fab fa-github-square"></i></a> <a class="has-text-white" href="https://linkedin.com/in/robert-hampton-2021" target="_blank"><i class="fab fa-linkedin"></a></i></div>
 </div>
+
+<div id="main-content" class="section">
+
 <div id="personal-about" class="container full-page">
   <div class="personal-description">
-    <h1 class="is-size-3">About Me</h1>
+    <h1 class="is-size-2">About Me</h1>
     <p>Hello and welcome to my personal website! My name is Robert Hampton and I'm a Computer Science student
     at the University of Dundee and an aspiring software developer. I will graduate in the summer of 2021 and right now
   I am looking for an internship in the summer of 2020 to help me get some experience in the industry and to further my skills.</p>
   </div>
   <div class="container personal-skills">
-    <h1 class="is-size-3">My Skills</h1>
+    <h1 class="is-size-2">My Skills</h1>
     <div class="columns">
   <div class="column">
   <div class="card">
@@ -107,7 +110,7 @@
       <div class="card-content">
      <div class="content">
        <p>I have experience with a wide variety of common software development tools - I typically use Linux so am familiar with working with a CLI, I use git and GitHub for most of my version control
-       for both University projects and personal projects, I have deployed a website using popular deployment platform Netlify, and I find myself increasingly using tools like NPM and pip as I tinker with new areas of development and try to expand my skills.</p>
+       for both University projects and personal projects, I have deployed websites using popular deployment platforms Netlify and Heroku, and I find myself increasingly using tools like NPM and pip as I tinker with new areas of development and try to expand my skills.</p>
        </div>
        </div>
     </div>
@@ -116,7 +119,7 @@
   </div>
 </div>
 <div id="personal-projects" class="container full-page ">
-  <h1 class="is-size-3">My Projects</h1>
+  <h1 class="is-size-2">My Projects</h1>
   <div class="columns">
   <div class="column">
     <div class="card">
@@ -238,10 +241,12 @@
 
 </div>
 </div>
-<div id="contact-form" class="container">
-<h1 class="is-size-2">Any questions?</h1>
-<h1 class="is-size-4">Please get in touch!</h1>
-<form action="https://formspree.io/xoqanqpp" method="POST">
+<div id="contact-section" class="container">
+<div class="container">
+  <h1 class="is-size-2">Any questions?</h1>
+  <h1 class="is-size-4">Please get in touch!</h1>
+</div>
+<form id="contact-form" action="https://formspree.io/xoqanqpp" method="POST">
   <div class="field">
   <label class="label">Name</label>
   <div class="control">
@@ -263,6 +268,7 @@
       <input type="submit" class="button is-primary">
   </div>
 </form>
+</div>
 </div>
 
 <footer class="footer">
