added note about Habit tracker delay due to Heroku

--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
       </header>
       <div class="card-content">
      <div class="content">
-       <p>This was a personal project I did to learn the popular Python web framework Django. It allows a user to sign up and start tracking habits they would like to build. The website is styled using Bootstrap and is deployed using Heroku.</p>
+       <p>This was a personal project I did to learn the popular Python web framework Django. It allows a user to sign up and start tracking habits they would like to build. The website is styled using Bootstrap and is deployed using Heroku.
+         Please note that because of the way Heroku loads websites onto its resources, this website can be slow to load initially.
+       </p>
        </div>
        </div>
        <footer class="card-footer">
