--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a href="#contact-form" class="button is-primary">
+          <a href="#contact-section" class="button is-primary">
             <strong>Contact Me</strong>
           </a>
         </div>
