Minor content updates

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 <div id="personal-about" class="container full-page">
   <div class="personal-description">
     <h1 class="is-size-2">About Me</h1>
-    <p>Hello and welcome to my personal website! My name is Robert Hampton and I'm a Computer Science student
-    at the University of Dundee and an aspiring software developer. I will graduate in the summer of 2021 and right now
-  I am looking for an internship in the summer of 2020 to help me get some experience in the industry and to further my skills.</p>
+    <p>Hello and welcome to my personal website! My name is Robert Hampton and I'm a Software Engineer working for NCR corporation and a recent Computer Science graduate!</p>
   </div>
   <div class="container personal-skills">
     <h1 class="is-size-2">My Skills</h1>
@@ -75,10 +73,8 @@
     </header>
     <div class="card-content">
    <div class="content">
-     <p>I am interested in a wide range of software development, but at the moment my particular focus is on web development, as I enjoy the practical
-       real world problem solving involved as well as the creative aspects of this kind of development.
-        The goal for me is to continue to improve my web development skills as well as start to learn some mobile development, which
-        is another area that is interesting to me.
+     <p>I am interested in a wide range of software development, but at the moment my focus is simply on improving my skills and furthering myself both as a 
+       person and as an engineer.
     </p>
      </div>
      </div>
@@ -93,9 +89,11 @@
       </header>
       <div class="card-content">
      <div class="content">
-       <p>I have experience with a whole host of popular languages - Java, C#, C, C++, Python - and my recent interest in web development
+       <p>I have experience with a whole host of popular languages - Java, C#, C, C++, Python - and my interest in web development
        has led to experience with diverse areas of the modern web dev stack, from the basic HTML/CSS and JS, to using component libraries for styling such as Bulma and Bootstrap, to creating a database application
-       using MySQL and PHP, as well as learning the basics of the JS framework Vue. </p>
+       using MySQL and PHP, as well as learning the basics of the JS framework Vue. In my work at NCR I have become familiar with microservices development
+      which has included learning Docker, Kubernetes, and Helm. I have picked up many other skills in this time as well, like using Jenkins to write CI/CD pipelines
+    and using the Java framework Spring Boot. </p>
        </div>
        </div>
     </div>
